--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
+  fluttertoast: ^3.1.3
+
+  shared_preferences: ^0.5.4
+
+  dio: ^3.0.8
+  
+  http: ^0.12.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
